force-app/main/default/objects/Product_Preference__c/Product_Preference__c.object-meta.xml
<CustomObject>
    <label>Product Preference</label>
    <nameField>
        <label>Product Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>