force-app/main/default/objects/Product_Preference__c/fields/Initial_Margin_Basis_Points__c.field-meta.xml
<CustomField>
    <fullName>Initial_Margin_Basis_Points__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Index rate minus interest margin which gives the interest rate that the customer views on their application</description>
    <label>Initial Margin Basis Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>