force-app/main/default/objects/Product_Preference__c/fields/Initial_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rate_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Captures customer&apos;s preferred rate type on the offered home loan product</description>
    <label>Initial Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RATE_TYPE_FIXED</fullName>
            </value>
            <value>
                <fullName>RATE_TYPE_VARIABLE</fullName>
            </value>
            <value>
                <fullName>RATE_TYPE_SPLIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>