force-app/main/default/objects/Product_Preference__c/fields/Initial_Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Initial_Repayment_Frequency__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Loan_Domain</complianceGroup>
    <label>Initial Repayment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>