force-app/main/default/objects/Product_Preference__c/fields/Initial_Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Initial_Repayment_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Captures customer&apos;s preferred repayment type on the offered home loan product</description>
    <label>Initial Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRINCIPAL_INTEREST</fullName>
            </value>
            <value>
                <fullName>INTEREST_ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>