force-app/main/default/objects/Product_Preference__c/fields/Initial_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Months__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Captures the duration of the loan i.e. how long the loan lasts</description>
    <label>Initial Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>