force-app/main/default/objects/Product_Preference__c/fields/Offset__c.field-meta.xml
<CustomField>
    <fullName>Offset__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Loan_Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean captures if the preference is offset or not</description>
    <label>Offset</label>
    <type>Checkbox</type>
</CustomField>