force-app/main/default/objects/Product_Preference__c/fields/Product_Preference_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Preference_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <externalId>true</externalId>
    <label>Product Preference ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>