force-app/main/default/objects/Product_Preference__c/fields/Product_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Loan_Domain</complianceGroup>
    <description>Captures the offered product&apos;s sub code as defined in Product Catalog (Zafin)</description>
    <label>Product Sub Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>