force-app/main/default/objects/Product_Preference__c/fields/Residential_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Residential_Loan_Application__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    
    <description>Application ID consumed from the loan domain</description>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Product Preferences</relationshipLabel>
    <relationshipName>Product_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>