force-app/main/default/objects/Product_Preference__c/fields/Subsequent_Index_Rate_Basis_Point__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Index_Rate_Basis_Point__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Loan_Domain</complianceGroup>
    <description>Index rate minus interest margin which gives the interest rate that the customer views on their application</description>
    <label>Subsequent Index Rate Basis Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>