force-app/main/default/objects/Product_Preference__c/fields/Subsequent_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Period_Months__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Loan period is derived when the customer opts for a fixed term product</description>
    <label>Subsequent Period Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>