force-app/main/default/objects/Product_Preference__c/fields/Subsequent_Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Repayment_Frequency__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Loan_Domain</complianceGroup>
    <description>Captures the customer&apos;s the repayment frequency e.g. 52 times a year (weekly), 26 times a year (fortnightly) or 12 times a year (monthly) on the offered home loan product</description>
    <label>Subsequent Repayment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>52 times a year (weekly)</fullName>
            </value>
            <value>
                <fullName>26 times a year (fortnightly)</fullName>
            </value>
            <value>
                <fullName>12 times a year (monthly)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>