force-app/main/default/objects/Product_Preference__c/fields/Subsequent_Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Repayment_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Captures customer&apos;s preferred repayment type on the offered home loan product</description>
    <label>Subsequent Repayment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>