force-app/main/default/objects/Product_Preference__c/fields/Subsequent_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Term_Months__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Loan_Domain</complianceGroup>
    <description>Captures the duration of the loan in months i.e. how long the loan lasts</description>
    <label>Subsequent Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>